<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/filter_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="invisible">

    <ListView
        android:id="@+id/saved_filters_list"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/colorPrimaryDark"
        android:visibility="gone"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sort_by"/>

                <Spinner
                    android:id="@+id/sort_by_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:entries="@array/sorting"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/filter_by_date"/>

                <Switch
                    android:id="@+id/switch_date_picker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

            </LinearLayout>

            <RadioGroup
                android:id="@+id/radio_date_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/half_lite_gray"
                android:checkedButton="@+id/by_single_date_radio"
                android:gravity="end"
                android:orientation="horizontal"
                android:padding="16dp"
                android:visibility="gone">

                <RadioButton
                    android:id="@+id/by_single_date_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/by_date"/>

                <RadioButton
                    android:id="@+id/by_range_date_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/by_range"/>

            </RadioGroup>

            <LinearLayout
                android:id="@+id/date_picker_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/half_lite_gray"
                android:orientation="horizontal"
                android:padding="16dp"
                android:visibility="gone">

                <EditText
                    android:id="@+id/start_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:inputType="date"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="@string/dash"/>

                <EditText
                    android:id="@+id/end_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:enabled="false"
                    android:inputType="date"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/filter_by_color"/>

                <View
                    android:id="@+id/selected_color_area"
                    android:layout_width="match_parent"
                    android:layout_height="27dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="3"
                    android:alpha="0.3"
                    android:background="#c6c6c6"/>

                <Switch
                    android:id="@+id/switch_color_picker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/by_alphabetically"/>

                <Switch
                    android:id="@+id/alphabetically_switch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/order_by"/>

                <RadioGroup
                    android:id="@+id/order_radio_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checkedButton="@+id/order_front_radio">

                    <RadioButton
                        android:id="@+id/order_reverse_radio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/descendyngly"/>

                    <RadioButton
                        android:id="@+id/order_front_radio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ascending"/>

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/filter_save_button"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/save"/>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/filter_apply_button"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/apply"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>