<resources>
    <string name="app_name">TaskManager</string>
    <string name="toolbar_filter_title">Параметры</string>
    <string name="action_filter">Фильтр</string>
    <string name="active_tasks_title">В планах</string>
    <string name="completed_tasks_title">Выполнено</string>
    <string name="task_is_complete">Задача выполнена</string>
    <string name="postpone_the_task">Отложить задачу</string>
    <string name="delete_the_task">Удалить задачу</string>
    <string name="edit_the_task">Редактировать</string>
    <string name="restore_the_task">Восстановить задачу</string>
    <string name="task_was_created">Новая задача создана</string>
    <string name="task_was_updated">Задача обновлена</string>
    <string name="search_hint">Введите название</string>
    <string name="entry_filter_name">Введите название фильтра</string>
    <string name="filter_was_saved">Фильтр сохранен</string>
    <string name="need_permission_external">Предоставьте разрешения на работу с External Storage</string>
    <string name="task_successful_export">Ваши задачи успешно экспортированы</string>
    <string name="task_export_failed">Не удалось сохранить данные</string>
    <string name="incorrect_length">Длина не должна превышать</string>
    <string name="entry_description">Введите описание</string>
    <string name="task_successful_import">Задачи успешно импортированы</string>
    <string name="task_import_failed">Не удалось импортировать задачи</string>
    <string name="recent_colors">Последние цвета</string>
    <string name="select">Выбрать</string>
    <string name="select_directory">Выбрать директорию</string>
    <string name="cancel">Отмена</string>
    <string name="save">Сохранить</string>
    <string name="name_title">Название</string>
    <string name="description">Примечание</string>
    <string name="complete">Готово</string>
    <string name="sort_by">Сортировать по</string>
    <string name="filter_by_date">Вывод по дате</string>
    <string name="by_date">по дате</string>
    <string name="by_range">по диапазону</string>
    <string name="dash">—</string>
    <string name="filter_by_color">Вывод по цвету</string>
    <string name="by_alphabetically">В алфавитном порядке</string>
    <string name="order_by">Порядок по</string>
    <string name="descendyngly">Убыванию</string>
    <string name="ascending">Возрастанию</string>
    <string name="today">Сегодня</string>
    <string name="url_to_image">Ссылка на изображение</string>
    <string name="data_generate_started">Генерация данных началась</string>
    <string name="data_generate">Генерация данных</string>
    <string name="generated">Сгенерировано</string>
    <string name="data_is_generated">Данные сгенерированы</string>
    <string name="data_import">Импорт данных</string>
    <string name="data_export">Экспорт данных</string>
    <string name="please_wait_data_is_imported">Подождите, данные импортируются…</string>
    <string name="data_is_saved">Данные сохраняются…</string>
    <string name="data_collection_started">Сбор данных начался</string>
    <string name="data_collected">Собрано данных</string>
    <string name="merge_conflict_title">Конфликт изменений</string>
    <string name="merge_conflict_descr">Нажмите на вариант, который хотите сохранить.</string>
    <string name="sync_failed">Не удалось синхронизировать данные</string>
    <string name="sync_success">Успешно синхронизировано</string>
    <string name="sync_title">Синхронизация</string>
    <string name="conflict_not_resolved">Не удалось разрешить конфликт</string>
    <string name="enter_the_login">Введите логин</string>
    <string name="login">Войти</string>
    <string name="apply">Применить</string>
    <string name="saved_filters">Сохраненные фильтры</string>
    <string name="search_filter">Фильтр поиска</string>
    <string name="image_from_web">img_descr</string>
    <string name="_00_00">00:00</string>
    <string name="export_title">Экспорт</string>
    <string name="import_title">Импорт</string>
    <string name="generate_data">Генерировать данные</string>

    <string-array name="sorting">
        <item>Дате выполнения</item>
        <item>Дате создания</item>
        <item>Дате редактирования</item>
        <item>Порядку</item>
    </string-array>

    <string-array name="searching">
        <item>По названию</item>
        <item>По описанию</item>
    </string-array>

</resources>
